version/0.76/_sources/autoapi/pyedb/misc/downloads/index.rst.txt






The ``pyedb.misc.downloads`` library
====================================

.. py:module:: pyedb.misc.downloads


Summary
-------








.. py:currentmodule:: downloads
.. tab-set::







    .. tab-item:: Functions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~delete_downloads`
            - Delete all downloaded examples to free space or update the files.


          * - :py:obj:`~list_examples_files`
            - List all files in a folder of the example-data repository.


          * - :py:obj:`~download_aedb`
            - Download an example of AEDB File and return the def path.


          * - :py:obj:`~download_edb_merge_utility`
            - Download an example of WPF Project which allows to merge 2 aedb files.


          * - :py:obj:`~download_via_wizard`
            - Download an example of Hfss Via Wizard and return the def path.


          * - :py:obj:`~download_touchstone`
            - Download an example of touchstone File and return the def path.


          * - :py:obj:`~download_file`
            - Download file from directory.


          * - :py:obj:`~unzip`
            - Extract all files from a zip archive.



    .. tab-item:: Attributes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~pyedb_logger`
            - 



    .. tab-item:: Constants

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~EXAMPLES_PATH`
            - 















Description
-----------

Download example datasets from https://github.com/pyansys/example-data

..
    !! processed by numpydoc !!






Module detail
-------------

.. py:function:: delete_downloads() -> None

   
   Delete all downloaded examples to free space or update the files.















   .. rubric:: Examples

   >>> import pyedb.misc.downloads as downloads
   >>> downloads.delete_downloads()

   ..
       !! processed by numpydoc !!

.. py:function:: list_examples_files(folder) -> list

   
   List all files in a folder of the example-data repository.


   :Parameters:

       **folder** : :class:`python:str`
           The folder in the GitHub repository to list files from, e.g., "pyaedt/sbr/".



   :Returns:

       :class:`python:list`
           A list of file paths in the specified folder.











   ..
       !! processed by numpydoc !!

.. py:function:: download_aedb(destination: str | None = None) -> str

   
   Download an example of AEDB File and return the def path.

   Examples files are downloaded to a persistent cache to avoid
   re-downloading the same file twice.

   :Parameters:

       **destination** : :class:`python:str` or :data:`python:None`, :obj:`optional`
           Path for downloading files.
           The default is ``None``, which uses the user's temp folder.



   :Returns:

       :class:`python:str`
           Path to the example file.










   .. rubric:: Examples

   Download an example result file and return the path of the file.

   >>> import pyedb.misc.downloads
   >>> path = pyedb.misc.downloads.download_aedb()
   >>> path
   'C:/Users/user/AppData/local/temp/Galileo.aedb'

   ..
       !! processed by numpydoc !!

.. py:function:: download_edb_merge_utility(force_download: bool = False, destination: str | None = None) -> str

   
   Download an example of WPF Project which allows to merge 2 aedb files.

   Examples files are downloaded to a persistent cache to avoid
   re-downloading the same file twice.

   :Parameters:

       **force_download** : :ref:`bool <python:bltin-boolean-values>`, :obj:`optional`
           Force to delete cache and download files again.
           The default is ``False``.

       **destination** : :class:`python:str` or :data:`python:None`, :obj:`optional`
           Path for downloading files.
           The default is ``None``, which uses the user's temp folder.



   :Returns:

       :class:`python:str`
           Path to the example file.










   .. rubric:: Examples

   Download an example result file and return the path of the file.

   >>> import pyedb.misc.downloads
   >>> path = pyedb.misc.downloads.download_edb_merge_utility(force_download=True)
   >>> path
   'C:/Users/user/AppData/local/temp/PyAEDTExamples/wpf_edb_merge/merge_wizard.py'

   ..
       !! processed by numpydoc !!

.. py:function:: download_via_wizard(destination: str | None = None) -> str

   
   Download an example of Hfss Via Wizard and return the def path.

   Examples files are downloaded to a persistent cache to avoid
   re-downloading the same file twice.

   :Parameters:

       **destination** : :class:`python:str` or :data:`python:None`, :obj:`optional`
           Path for downloading files.
           The default is ``None``, which uses the user's temp folder.



   :Returns:

       :class:`python:str`
           Path to the example file.










   .. rubric:: Examples

   Download an example result file and return the path of the file.

   >>> import pyedb.misc.downloads
   >>> path = pyedb.misc.downloads.download_via_wizard()
   >>> path
   'C:/Users/user/AppData/local/temp/PyAEDTExamples/viawizard_vacuum_FR4.aedt'

   ..
       !! processed by numpydoc !!

.. py:function:: download_touchstone(destination: str | None = None) -> str

   
   Download an example of touchstone File and return the def path.

   Examples files are downloaded to a persistent cache to avoid
   re-downloading the same file twice.

   :Parameters:

       **destination** : :class:`python:str` or :data:`python:None`, :obj:`optional`
           Path for downloading files.
           The default is ``None``, which uses the user's temp folder.



   :Returns:

       :class:`python:str`
           Path to the example file.










   .. rubric:: Examples

   Download an example result file and return the path of the file.

   >>> import pyedb.misc.downloads
   >>> path = pyedb.misc.downloads.download_touchstone()
   >>> path
   'C:/Users/user/AppData/local/temp/PyAEDTExamples/SSN_ssn.s6p'

   ..
       !! processed by numpydoc !!

.. py:function:: download_file(directory: str, filename: str | None = None, destination: str | None = None) -> str

   
   Download file from directory.

   Files are downloaded to a destination. If filename is not specified, the full directory will be downloaded.

   :Parameters:

       **directory** : :class:`python:str`
           Directory name.

       **filename** : :class:`python:str` or :data:`python:None`, :obj:`optional`
           File name to download.
           The default is ``None``, which downloads all files inside directory.

       **destination** : :class:`python:str` or :data:`python:None`, :obj:`optional`
           Path where files will be downloaded.
           The default is ``None``, which uses the user's temp folder.



   :Returns:

       :class:`python:str`
           Path to the example file.










   .. rubric:: Examples

   Download an example result file and return the path of the file.

   >>> import pyedb.misc.downloads
   >>> path = pyedb.misc.downloads.download_file("pyaedt/edb/ansys_interposer", "dummy_interposer_hbm.map")
   >>> path
   'C:/Users/user/AppData/local/temp/PyAEDTExamples/pyaedt/edb/ansys_interposer/dummy_interposer_hbm.map'

   ..
       !! processed by numpydoc !!

.. py:function:: unzip(source_filename: str, dest_dir: str) -> None

   
   Extract all files from a zip archive.


   :Parameters:

       **source_filename** : :class:`python:str`
           Path to the zip file to extract.

       **dest_dir** : :class:`python:str`
           Destination directory for extracted files.













   .. rubric:: Examples

   >>> import pyedb.misc.downloads as downloads
   >>> downloads.unzip("example.zip", "/path/to/destination")

   ..
       !! processed by numpydoc !!

.. py:data:: EXAMPLES_PATH

.. py:data:: pyedb_logger



